[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/items/weapons/weapon.gd" type="Script" id=1]
[ext_resource path="res://game/items/weapons/generic_weapon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="generic_weapon" type="Node2D" groups=[
"equipment",
"weapons",
]]
script = ExtResource( 1 )
user_type = ""
weapon_type = "MACE"

[node name="weapon_area" type="Area2D" parent="."]
position = Vector2( 32, 0 )
collision_layer = 8
collision_mask = 7

[node name="hitbox" type="CollisionShape2D" parent="weapon_area"]
shape = SubResource( 1 )

[node name="weapon_tween" type="Tween" parent="weapon_area"]

[node name="sprite" type="Sprite" parent="weapon_area"]
scale = Vector2( 2, 1 )
texture = ExtResource( 2 )

[node name="weapon_cooldown" type="Timer" parent="."]

[node name="interact_area" type="Area2D" parent="." groups=[
"dropped_equipment",
"dropped_weapons",
]]
position = Vector2( 32, 0 )
collision_layer = 32
__meta__ = {
"_edit_group_": true
}

[node name="interact_shape" type="CollisionShape2D" parent="interact_area"]
shape = SubResource( 2 )

[connection signal="body_entered" from="weapon_area" to="." method="_on_weapon_area_body_entered"]
[connection signal="timeout" from="weapon_cooldown" to="." method="_on_weapon_cooldown_timeout"]
